# 18645_watershed

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  benchmark  benchmark.cpp  benchmark.py  cmake_install.cmake  compilerssuck.cpp  jorge_sample.cpp  kernel_alts.c  morph_driver.h  morph_kernel.c  morph_kernel.h  morph_kernel_2.h  morph_kernel_3.h  test  test.S  test.c  test.cpp
instr_benchmarking/: Makefile  latency_and_or.S  latency_and_or.x  latency_set_epi8.c  throughput_and_or.c
to_submit/MyImpl/: Makefile  morph_kernel.c  test.c
to_submit/OpenCV/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  opencv_benchmark.cpp
